--- a/src/style.css
+++ b/src/style.css
@@ -84,7 +84,7 @@ form {
   margin: 20px 0 0;
   width: 120px;
 }
-.temperature {
+#temperature {
   font-size: 100px;
   text-align: center;
   color: rgb(226, 226, 226);
